--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter&family=PT+Serif&display=swap');
+
 * {
     padding: 0;
     text-decoration: none;
     list-style: none;
     margin: 0;
     box-sizing: border-box;
-    font-family: Arial;
+    font-family: 'PT Serif', serif;
+}
+body{
+  background-color: #fffffc;
 }
 /*SCROLLBAR*/ 
 /* width */
@@ -24,14 +29,14 @@
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #e31e24; 
+    background: #a01e32; 
   }
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 
 #header {
-  background-image: url(../images/navbarbg.jpg);
+  background-color: white;
   padding: 10px 0;
   position: fixed;
   left: 0;
@@ -55,7 +60,7 @@
 }
 
 .container {
-    padding-right: 3%;
+    padding-right: 2%;
     padding-left: 3%;
 }
 
@@ -89,15 +94,16 @@
   padding: 8px;
   text-decoration: none;
   display: block;
-  color: #dcdcdc;
+  color: #000000;
   font-weight: 600;
   font-size: 18px;
   outline: none;
+  font-family: 'Bitter', serif;
 }
 
 .nav-menu .menu-active,
 .nav-menu a:hover {
-  color: #e31e24;
+  color: #a01e32;
   display: block;
 }
 
@@ -111,7 +117,7 @@
   height: 3px;
   bottom: 0;
   left: 0;
-  background-color: #e31e24;
+  background-color: #a01e32;
   visibility: hidden;
   transition: all 0.3s ease-in-out 0s;
 }
@@ -125,12 +131,12 @@
 .men{
   display: none;
 }
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 800px) {
     .nshow{
       display: none;
     }
     .sidepanel  {
-      background-image: url(../images/sidenavbarbg.jpg);
+      background-color: white;
       width: 0;
       position: fixed;
       z-index: 1;
@@ -143,18 +149,18 @@
     }
 
     .sidepanel a:hover {
-        border-bottom: 3px solid #e31e24;
+        border-bottom: 3px solid #a01e32;
     }
     .sidepanel .closebtn {
         position: absolute;
         top: 10px;
         right: 25px;
-        font-size: 25px;
+        font-size: 20px;
     }
     .openbtn,.closebtn {
-        background: #e31e24;
+        background: #a01e32;
         color: #dcdcdc;
-        font-size: 25px;
+        font-size: 20px;
         border: 2px solid #dcdcdc;
         cursor: pointer;
         height: 30px;
@@ -162,7 +168,7 @@
     }
     .openbtn:hover,.closebtn:hover {
         background:#dcdcdc;
-        color: #e31e24;
+        color: #a01e32;
     }
 
     .men{
@@ -174,17 +180,24 @@
       padding: 15px;
       text-decoration: none;
       display: block;
-      color: #dcdcdc;
+      color: #000000;
       font-weight: 600;
       font-size: 18px;
       outline: none;
+      font-family: 'Bitter', serif;
     }
 
   .men .menu-active,
   .men a:hover {
-        color: #e31e24;
+        color: #a01e32;
     }
 }
+/*--------------------------------------------------------------
+# Navigation Menu End
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Home page
+--------------------------------------------------------------*/
 .slideshow-container {
   margin-top: 100px;
   width: 100%;
@@ -216,28 +229,24 @@
     top:50%;
     left: 30%;
     transform: translate(-50%,-50%);
-    color:#e31e24 ;
+    color:#a01e32 ;
     background-color: #dcdcdc;
-    border: 3px solid #e31e24;
+    border: 3px solid #a01e32;
     letter-spacing: 4px;
     font-size: 30px;
     padding: 10px 30px 10px;
-}
-.contentce{
-  width: 100%;
-  height:250px;
 }
 .homeabout{
   display: flex;
   flex-wrap: wrap;
   padding: 40px;
-  margin-top: 30px;
-  margin-bottom: 30px;
   color: #000000;
   text-align: center;
 }
 .homeabout .title{
-  font-size: 30px;
+  font-size: 32px;
+  color: #a01e32;
+  font-family: 'Bitter', serif;
   width: 100%;
   font-weight: 600;
   padding-bottom: 30px;
@@ -246,11 +255,11 @@
   padding-left: 4%;
   width: 100%;
   padding-right: 4%;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400; 
 }
 .whycfrp{
-  background-color: #e31e24;
+  background-color: #a01e32;
   width: 100%;
   height: 400px;
   display: flex;
@@ -259,8 +268,9 @@
   padding: 25px 0px 25px 0px;
 }
 .whycfrp .title{
+  font-family: 'Bitter', serif;
   position: absolute;
-  font-size: 30px;
+  font-size: 32px;
   font-weight: 600;
   text-align: center;
 }
@@ -287,30 +297,14 @@
 .whycfrp .properties h1{
   height: 80px;
   width: 100%;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 600;
 }
 .whycfrp .properties span{
   width: 100%;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
 }
-
-.footer{
-  height: 50px;
-  color: #dcdcdc;
-  font-size: 15px;
-  background-color: #000000;
-  padding: 15px;
-}
-.footer .leftalign{
-  float: left;
-}
-.footer .rightalign{
-  float: right;
-}
-
-
 
 @media screen and (max-width: 800px){
   .homeabout{
@@ -353,12 +347,124 @@
     left: 50%;
     font-size: 18px;
   }
+}
+/*--------------------------------------------------------------
+# Home end
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# process capabilities start
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Navigation Menu
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# product page
+--------------------------------------------------------------*/
+.containermain .card {
+  box-shadow: 0px 3px 6px #a01e32;
+  border-radius: 15px;
+  border: 2px solid #a01e32;
+  transition: 0.3s;
+  background-color: #ffffff;
+  margin: 20px;
+  width: 40%;
+  text-align: center;
+  color: #000000;
+  padding: 10px;
+  height: 600px;
+  position: relative;
+}
+.containermain{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.containermain .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(44, 43, 43, 0.911);
+}
+.containermain .image1 {
+    position: relative;
+    overflow: visible;
+    display: block;
+    width: 100%;
+    border-radius: 15px;
+}
+.containermain .title{
+  margin-top: 15px;
+  width: 100%;
+  height: 50px;
+  font-size: 24px;
+  font-weight: 600;
+  color: #a01e32;
+  font-family: 'Bitter', serif;
+}
+.containermain .productcontent{
+  margin-top: 20px;
+  padding-left: 4%;
+  width: 100%;
+  padding-right: 4%;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: left;
+}
+
+@media screen and (max-width: 1200px) {
+  .containermain  .card {
+      width: 47%;
+      margin:10px;
+  }
+}
+@media screen and (max-width: 750px) {
+  .containermain  .card {
+      width: 90%;
+      margin:15px;
+  }
+}
+/*--------------------------------------------------------------
+# product end
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# about us start
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# about us end
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# contact us start
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# contact us end
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# footer
+--------------------------------------------------------------*/
+.footer{
+  height: 50px;
+  color: #dcdcdc;
+  font-size: 15px;
+  background-color: #000000;
+  padding: 15px;
+  font-family: 'Bitter', serif;
+}
+.footer .leftalign{
+  float: left;
+}
+.footer .rightalign{
+  float: right;
+}
+@media screen and (max-width: 800px){
   .footer{
     text-align: center;
     font-size: 12px;
+    padding: 5px;
   }
   .footer .leftalign,
   .footer .rightalign{
     float: none;
   }
 }
+/*--------------------------------------------------------------
+# footer end
+--------------------------------------------------------------*/
