--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ body{
 .homecontainer .parag{
   width: 50%;
   display: flex;
-  text-align: justify;
+  text-align: center;
   align-items: center;
   padding-left: 4%;
   font-size: 16px;
@@ -277,9 +277,9 @@ body{
   padding-bottom: 30px;
 }
 .homeexpertise .parag{
-  padding-left: 4%;
+  padding-left: 20px;
   width: 100%;
-  padding-right: 4%;
+  padding-right: 20px;
   font-size: 16px;
   font-weight: 400; 
 }
@@ -306,15 +306,24 @@ body{
   padding: 5px;
   position: relative;
   display: flex;
+  overflow: hidden;
   justify-content: center;
 }
-
+.ourbusiness .column .images{
+  width:100%;
+  display: block;
+  transition: transform .4s;
+}
+.ourbusiness .column .images:hover{
+  transform: scale(1.3);
+  transform-origin: 50% 50%;
+}
 .ourbusiness .parag {
   position: absolute;
   bottom: 5px;
   background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  font-size: 16px;
+  color: #ffffff;
+  font-size: 18px;
   font-weight: 400; 
   width: 96%;
   padding: 20px;
@@ -348,12 +357,17 @@ body{
     width: 50%;
   }
   .homeexpertise .title,.ourbusiness .title{
-    font-size: 20px;
+    font-size: 24px;
   }
-  .homeexpertise .parag,.ourbusiness .parag {
+  .homeexpertise .parag{
     padding-left: 0;
     padding-right: 0;
-    font-size: 15px; 
+    font-size: 16px; 
+  }
+  .ourbusiness .parag {
+    padding-left: 0;
+    padding-right: 0;
+    font-size: 18px; 
   }
   .pagetitlebg .centered{
     left: 50%;
@@ -379,14 +393,14 @@ body{
   box-shadow: 0px 3px 6px #e31e24;
   border-radius: 15px;
   border: 2px solid #e31e24;
-  transition: 0.3s;
   background-color: #ffffff;
   margin: 20px;
-  width: 40%;
-  text-align: center;
+  width: 28%;
+  text-align: left;
   color: #000000;
-  padding: 10px;
-  height: 600px;
+  padding: 20px;
+  padding-left: 30px;
+  height: 350px;
   position: relative;
 }
 .containermain{
@@ -399,42 +413,86 @@ body{
 .containermain .card:hover {
   box-shadow: 0 8px 16px 0 rgba(44, 43, 43, 0.911);
 }
-.containermain .image1 {
-    position: relative;
-    overflow: visible;
-    display: block;
-    width: 100%;
-    border-radius: 15px;
+
+.containermain .maintitle{
+  font-size: 32px;
+  text-align: center;
+  color: #e31e24;
+  font-family: 'Bitter', serif;
+  width: 100%;
+  font-weight: 600;
+  padding-bottom: 30px;
 }
-.containermain .title{
+.containermain .card .title{
   margin-top: 15px;
+  margin-bottom: 15px;
+  font-family: 'Bitter', serif;
   width: 100%;
   height: 50px;
   font-size: 24px;
   font-weight: 600;
   color: #e31e24;
-  font-family: 'Bitter', serif;
 }
-.containermain .productcontent{
-  margin-top: 20px;
-  padding-left: 4%;
+.containermain .card .productcontent{
+  height: 150px;
   width: 100%;
-  padding-right: 4%;
+  padding-right: 30px;
   font-size: 16px;
   font-weight: 400;
   text-align: left;
 }
-
+.containermain .card .rmcont{
+  padding-top: 25px;
+}
+.containermain .card .rmcont .rmbutton{
+  padding: 15px;
+  color: #000000;
+  font-size: 16px;
+  width: 200px;
+  cursor: pointer;
+  background-color: #dcdcdc;
+  border: 2px solid #dcdcdc;
+}
+.containermain .card .rmcont .rmbutton:hover{
+  background-color: #ffffff;
+  border: 2px solid #e31e24;
+  color: #e31e24;
+}
 @media screen and (max-width: 1200px) {
   .containermain  .card {
-      width: 47%;
+      height: 450px;
       margin:10px;
   }
+  .containermain .card .title{
+    height: 80px;
+  }
+  .containermain .card .productcontent{
+    height: 220px;
+    font-size: 15px;
+  }
+  .containermain .card .rmcont .rmbutton{
+    width: 150px;
+  }
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 800px) {
+  .containermain .maintitle{
+    font-size: 24px;
+  }
   .containermain  .card {
-      width: 90%;
-      margin:15px;
+      width: 85%;
+      height: 300px;
+      margin:10px;
+  }
+  .containermain .card .title{
+    height: 40px;
+    font-size: 18px;
+  }
+  .containermain .card .productcontent{
+    height: 100px;
+  }
+  .containermain .card .rmcont .rmbutton{
+    width: 200px;
+    font-size: 15px;
   }
 }
 /*--------------------------------------------------------------
