--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body{
   padding: 10px 0;
   position: fixed;
   left: 0;
-  top: 0;
+  top: 40px;
   right: 0;
   transition: all 0.5s;
   z-index: 1;
@@ -199,7 +199,7 @@ body{
 # Home page
 --------------------------------------------------------------*/
 .slideshow-container {
-  margin-top: 100px;
+  margin-top: 140px;
   width: 100%;
   position: relative;
 }
@@ -299,14 +299,6 @@ body{
   border-top: 2px solid red;
   border-left: 2px solid red;
 }
-.homeexpertise .boxfull{
-  width: 230px;
-  margin-left: 35px;
-  height: 50px;
-  margin-top: -2px;
-  position: absolute;
-  border: 2px solid red;
-}
 .homeexpertise .lineend{
   width: 200px;
   margin-left: 265px;
@@ -390,14 +382,6 @@ body{
   border-top: 2px solid red;
   border-left: 2px solid red;
 }
-.markets .boxfull{
-  width: 150px;
-  margin-left: 35px;
-  height: 50px;
-  margin-top: -2px;
-  position: absolute;
-  border: 2px solid red;
-}
 .markets .lineend{
   width: 280px;
   margin-left: 185px;
@@ -453,11 +437,6 @@ body{
     margin-top: 18px;
     height: 40px;
   }
-  .homeexpertise .boxfull{
-    width: 170px;
-    margin-left: 10px;
-    height: 40px;
-  }
   .homeexpertise .lineend{
     width: 120px;
     margin-left: 180px;
@@ -473,11 +452,6 @@ body{
     width: 25px;
     margin-left: -15px;
     margin-top: 18px;
-    height: 40px;
-  }
-  .markets .boxfull{
-    width: 110px;
-    margin-left: 10px;
     height: 40px;
   }
   .markets .lineend{
@@ -755,6 +729,31 @@ body{
 /*--------------------------------------------------------------
 # footer
 --------------------------------------------------------------*/
+.quickheader{
+  position: fixed;
+  text-align: right;
+  z-index: 1;
+  height: 50px;
+  margin-top: -140px;
+  font-size: 16px;
+  background-color: #dcdcdc;
+  font-weight: 400;
+  width: 100%;
+  padding: 5px;
+}
+.quickheader i{
+  margin-right: 20px;
+  padding: 5px;
+  color: #000000;
+  background-color: #dcdcdc;
+  border-radius: 50%;
+  border: 2px solid #dcdcdc;
+}
+.quickheader i:hover{
+  color: #e31e24;
+  background-color: #ffffff;
+  border: 2px solid #e31e24;
+}
 .quickfooter{
   font-size: 16px;
   display: flex;
@@ -821,7 +820,8 @@ body{
   color: #dcdcdc;
   font-size: 12px;
   background-color: #000000;
-  padding: 15px;
+  padding: 10px;
+  font-weight: 400;
   font-family: 'Bitter', serif;
 }
 .footer .leftalign{
